--- a/MVCAzureDemo/MVCAzureDemo/Views/Home/Contact.cshtml
+++ b/MVCAzureDemo/MVCAzureDemo/Views/Home/Contact.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Contact US Sri";
+    ViewBag.Title = "Contact US Ramesh";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
@@ -8,7 +8,7 @@
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
-    +91 9849863633
+    +91 123456789
 </address>
 
 <address>
