--- a/MVCAzureDemo/MVCAzureDemo/Views/Home/Contact.cshtml
+++ b/MVCAzureDemo/MVCAzureDemo/Views/Home/Contact.cshtml
@@ -6,7 +6,7 @@
 
 <address>
     One Microsoft <br />
-    Redmond, WA 98052-6399<br />
+    Redmond, WA 7036186802<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
 </address>
